<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/icd_logo" />

    <EditText
        android:id="@+id/etPseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPseudo"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_gravity="center"
        android:text="@string/btLogIn" />
    
    <Button 
        android:id="@+id/btnSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/btnSubscribe"
        android:background="@android:color/transparent"
        android:onClick="showSubscribeActivity"/>
</LinearLayout>