<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
		android:textStyle="italic"
        android:text="@string/join" />
    
    <EditText
        android:id="@+id/etNewNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNewNickName"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"/>
    
    <EditText
        android:id="@+id/etNewPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNewPwd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/etConfirmPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPwdConfirm"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_gravity="center"
        android:text="@string/btnJoin" 
        android:onClick="join"/>

</LinearLayout>